# schc-coreconf

./: .gitignore  .gitmodules  Cargo.toml  README.md  ietf-schc@2026-01-12.yang
examples/: derive_implicit.rs  derive_implicit_visualization.md  progressive_rule_demo.rs  schc_coap_client.rs  schc_coap_server.rs  schc_core.rs  schc_device.rs  sor_converter.rs  udp_tunnel_interop.rs
rules/: base-ipv6-udp.json  base-ipv6-udp.sor  docker1.json  docker1.sor  test-rule.json  test-rule.sor
samples/: ietf-schc.sid  ietf-schc@2026-01-12.sid  ietf-schc@2026-01-12.yang  initial-rules.json  m-rules.json  m-rules.sor
src/: conversion.rs  coreconf_adapter.rs  error.rs  guard_period.rs  identities.rs  lib.rs  m_rules.rs  manager.rs  mgmt_compression.rs  rpc_builder.rs  rule_learner.rs  sor_loader.rs
